force-app/main/default/objects/Account/recordTypes/Business_Type.recordType-meta.xml
<RecordType>
    <fullName>Business_Type</fullName>
    <active>true</active>
    <description>This is for Business type</description>
    <label>Business Type</label>
</RecordType>