force-app/main/default/objects/Account/recordTypes/Personal_Type.recordType-meta.xml
<RecordType>
    <fullName>Personal_Type</fullName>
    <active>true</active>
    <description>This is for Person Type</description>
    <label>Personal Type</label>
</RecordType>