force-app/main/default/objects/Account/validationRules/Acc_Type_For_Business_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_Type_For_Business_Acc</fullName>
    <active>false</active>
    <description>Account Type is required for Bussness</description>
    <errorConditionFormula>AND (  RecordType.DeveloperName ==&apos;Business_Type&apos;,
 ISPICKVAL( Type , &apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Account Type is required for Bussness</errorMessage>
</ValidationRule>