force-app/main/default/objects/Account/validationRules/Billing_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Country</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(BillingCountry = &quot;US&quot;, BillingCountry=&quot;USA&quot;, ISBLANK(BillingCountry)))</errorConditionFormula>
    <errorMessage>Check billing country</errorMessage>
</ValidationRule>