force-app/main/default/objects/Account/validationRules/Custom_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Channel</fullName>
    <active>true</active>
    <errorConditionFormula>AND((ISPICKVAL( Type , &quot;Customer - Channel&quot;)) ,  ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Can not change Customer-Channel type account name</errorMessage>
</ValidationRule>