force-app/main/default/objects/Account/validationRules/Customer_Direct.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Direct</fullName>
    <active>true</active>
    <errorConditionFormula>AND((ISPICKVAL( Type , &quot;Customer - Direct&quot;)), ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Can not change Customer-Direct type Account Name</errorMessage>
</ValidationRule>