force-app/main/default/objects/Account/validationRules/Mandatory_Website.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Website</fullName>
    <active>false</active>
    <description>Website is mandatory for saving Account.</description>
    <errorConditionFormula>AND( Website==null , Website==&apos;&apos;)</errorConditionFormula>
    <errorMessage>Website is mandatory for saving Account.</errorMessage>
</ValidationRule>