force-app/main/default/objects/Account/validationRules/Shipping_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Country</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(ShippingCountry = &quot;US&quot;, ShippingCountry=&quot;USA&quot;, ISBLANK(ShippingCountry)))</errorConditionFormula>
    <errorMessage>Check Shipping Country</errorMessage>
</ValidationRule>