force-app/main/default/objects/Account/validationRules/Shipping_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_State</fullName>
    <active>false</active>
    <errorConditionFormula>AND (OR(ShippingCountry = &quot;US&quot;, ShippingCountry=&quot;USA&quot;, ISBLANK(ShippingCountry)), OR( LEN(ShippingState) &lt; 2, NOT(CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp; &quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp; &quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp; &quot;WA:WV:WI:WY&quot;, ShippingState) )))</errorConditionFormula>
    <errorMessage>Check shipping state</errorMessage>
</ValidationRule>